# rpi_edu_system

./: .gitmodules  CMakeLists.txt  CMakeLists1.txt  README.md  lint.sh  lv_conf.h
Squareline_build_files/SquareLine_Project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lv_conf.h  main.c
Squareline_build_files/SquareLine_Project/ui/: ui.h  ui_events.h  ui_helpers.h
Squareline_build_files/SquareLine_Project/ui/screens/: ui_Screen1.c
include/lvgl/: lv_conf.h
src/: CMakeLists.txt  main.cpp  testMain.cpp
src/drivers/interfaces/i2c/: README.md  i2c.cpp  i2c.h
src/drivers/modules/: CMakeLists.txt
src/drivers/modules/BME280/: bme280.cpp  bme280.h
src/drivers/modules/BME280_Wiringpi/: README.md  bme280.cpp  bme280.h
src/drivers/modules/DHT11/: dht11.cpp  dht11.h
src/drivers/modules/GPS/: gps.h  gps_data.cpp  gps_data.h  nmea.h  serial.h
src/drivers/modules/HMC5883L/: README.txt  hmc5883l.cpp  hmc5883l.h
src/drivers/modules/MCP3008/: README.md  mcp3008.cpp  mcp3008.h
src/drivers/modules/MPU6050/: mpu6050.cpp  mpu6050.h
src/gui/: CMakeLists.txt  gui_app.cpp  gui_app.h
src/gui/ui/: ui.c
src/gui/ui/screens/: ui_Screen1.c
ui/: ui.c  ui.h  ui_helpers.c
ui/components/: ui_comp_hook.c
ui/screens/: ui_Screen1.c
